--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1,5 +1,16 @@
+:root {
+  --white-backg: #fff;
+  --blue-color: #0290ff;
+  --blue-blur: #4386bf;
+  --back-color: #121212;
+  --size-small: 0.85rem;
+  --border-size: 1px solid #e8e8e8;
+}
+
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -18,4 +29,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+button {
+  border: none;
+  outline: none;
+  background-color: transparent;
 }
