--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -36,3 +36,21 @@ button {
   outline: none;
   background-color: transparent;
 }
+
+.check-status {
+  margin-left: 31.125rem;
+  font-size: 0.8rem;
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  color: white;
+  background-color: #0290ff;
+  padding: 0.5rem 1.375rem;
+  border-radius: 3px;
+  text-align: center;
+  transition: all 0.5s ease;
+}
+
+.check-status:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
